--- a/Prevu.Synoptics.V2150_Planeta/Details/D335.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Details/D335.xaml
@@ -44,7 +44,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:V01_STR_BatchReactor_wBottomAgitator Height="300" Width="137" Canvas.Left="196" Canvas.Top="175" ComponentName="335-41-LT1" TrendName="LEVEL" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_STR_BatchReactor_wBottomAgitator Height="300" Width="137" Canvas.Left="196" Canvas.Top="175" ComponentName="335-41-LT1" TrendName="LEVEL" HorizontalAlignment="Center" VerticalAlignment="Center" Color="WetMaterial"/>
         <Machines:CV_Valve Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="160" Canvas.Top="61" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
