--- a/Prevu.Synoptics.V2150_Planeta/Pages/P340.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P340.xaml
@@ -33,7 +33,6 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="82" StatusComponent="346-01-MA1" PipeHeight="Medium" Canvas.Left="1358" Canvas.Top="723" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_SLX_Silo Canvas.Left="192" Canvas.Top="181" Height="294" Width="219" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="310-41-LT1" TrendName="LEVEL"/>
         <Labels:Pipe Width="114" StatusComponent="346-01-MA1" PipeHeight="Medium" Canvas.Left="1306" Canvas.Top="670" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -87,36 +86,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Center"  VerticalAlignment="Top" Height="22" Width="180" Canvas.Left="267" Canvas.Top="606"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            JumpFromLabel="310-41-LT1" 
-            JumpToLabel="279-21-CV1" Canvas.Left="29" Canvas.Top="41" />
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="316-01-MA1" Canvas.Left="206" Canvas.Top="551" />
-        <Labels:Pipe Width="184" StatusComponent="318-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="402" Canvas.Top="759" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="166" Canvas.Left="265" Canvas.Top="759" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
-            ComponentName="318-01-MA1" Canvas.Left="402" Canvas.Top="700" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="198" Canvas.Left="251" Canvas.Top="461" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:JumpLabel 
-            JumpFromLabel="310-41-LT1" 
-            JumpToLabel="299-21-CV1" Canvas.Left="64" Canvas.Top="122" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:Pipe Width="694" StatusComponent="318-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="234" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" >
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Machines:Radar HorizontalAlignment="Left" VerticalAlignment="Top" Height="46" Width="52" Canvas.Left="326" Canvas.Top="143"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="310-41-LT1" Canvas.Left="376" Canvas.Top="123"/>
         <Labels:Pipe Width="304" StatusComponent="318-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="576" Canvas.Top="72" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="72" StatusComponent="318-01-MA1" PipeHeight="Medium" Height="22" RenderTransformOrigin="0.5,0.5" Canvas.Left="840" Canvas.Top="103" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
@@ -159,6 +128,16 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="237" StatusComponent="338-01-MA1" PipeHeight="Medium" Height="21" Canvas.Left="1069" Canvas.Top="143" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="338-21-CV1" VisibilitySignal="LS2"/>
+        <Labels:Pipe Width="283" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Height="6" Canvas.Left="916" Canvas.Top="355" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
         <Labels:Pipe Width="282" StatusComponent="338-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="22" Canvas.Left="1160" Canvas.Top="283" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="338-21-CV1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -169,7 +148,25 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:STR_BatchReactor Height="300" Width="137" Canvas.Left="778" Canvas.Top="487" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="340-41-LT1" TrendName="LEVEL"/>
+        <Labels:Pipe Width="80" StatusComponent="346-01-MA1" PipeHeight="Medium" Canvas.Left="1288" Canvas.Top="618" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="694" StatusComponent="318-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="234" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" >
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="184" StatusComponent="318-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="402" Canvas.Top="759" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Machines:V01_SLX_Silo Canvas.Left="192" Canvas.Top="181" Height="294" Width="219" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="310-41-LT1" TrendName="LEVEL" Color="DryMaterial"/>
+        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Center"  VerticalAlignment="Top" Height="22" Width="180" Canvas.Left="267" Canvas.Top="606"/>
+        <Machines:SCW_ScrewConveyor_straight Height="22" Width="166" Canvas.Left="265" Canvas.Top="759" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:SCW_ScrewConveyor_straight Height="22" Width="198" Canvas.Left="251" Canvas.Top="461" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:Radar HorizontalAlignment="Left" VerticalAlignment="Top" Height="46" Width="52" Canvas.Left="326" Canvas.Top="143"/>
+        <Machines:V01_STR_BatchReactor Height="300" Canvas.Left="778" Canvas.Top="487" Width="137" Color="WetMaterial" ComponentName="340-41-LT1" TrendName="LEVEL" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_STR_BatchReactor Height="300" Canvas.Left="1179" Canvas.Top="363" Width="137" ComponentName="345-41-LT1" TrendName="LEVEL" Color="WetMaterial" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:CV_Valve Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="853" Canvas.Top="187" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
@@ -190,6 +187,21 @@
                 </TransformGroup>
             </Machines:SCW_ScrewConveyor_straight.RenderTransform>
         </Machines:SCW_ScrewConveyor_straight>
+        <Labels:JumpLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            JumpFromLabel="310-41-LT1" 
+            JumpToLabel="279-21-CV1" Canvas.Left="29" Canvas.Top="41" />
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="316-01-MA1" Canvas.Left="206" Canvas.Top="551" />
+        <Labels:DeviceLabel 
+            ComponentName="318-01-MA1" Canvas.Left="402" Canvas.Top="700" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:JumpLabel 
+            JumpFromLabel="310-41-LT1" 
+            JumpToLabel="299-21-CV1" Canvas.Left="64" Canvas.Top="122" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="310-41-LT1" Canvas.Left="376" Canvas.Top="123"/>
         <Labels:DeviceLabel 
             ComponentName="340-MIXER" Canvas.Left="802" Canvas.Top="633" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel 
@@ -197,8 +209,6 @@
         <Labels:DeviceLabel 
             ComponentName="338-01-MA1" Canvas.Left="1041" Canvas.Top="87" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="340-VIEW" DetailsPageName="D340" Canvas.Left="821" Canvas.Top="696" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="80" StatusComponent="346-01-MA1" PipeHeight="Medium" Canvas.Left="1288" Canvas.Top="618" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:STR_BatchReactor Height="300" Width="137" Canvas.Left="1179" Canvas.Top="363" HorizontalAlignment="Left" VerticalAlignment="Center" TrendName="LEVEL" ComponentName="345-41-LT1"/>
         <Labels:DeviceLabel 
             ComponentName="345-MIXER" Canvas.Left="1203" Canvas.Top="509" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="345-VIEW" DetailsPageName="D345" Canvas.Left="1222" Canvas.Top="572" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -208,16 +218,6 @@
         <Labels:DetailsLabel ComponentName="311-VIEW" DetailsPageName="D311" Canvas.Left="487" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Center" HideComponentName="True"/>
         <Labels:DeviceLabel 
             ComponentName="311-DISCHARGE" Canvas.Left="388" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="283" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Height="6" Canvas.Left="916" Canvas.Top="355" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Labels:JumpLabel 
             JumpFromLabel="340-WASHING" 
             JumpToLabel="350-01-MA1" Canvas.Left="1431" Canvas.Top="703" HorizontalAlignment="Left" VerticalAlignment="Center"/>
