--- a/Prevu.Synoptics.V4088-Polimero/P230.xaml
+++ b/Prevu.Synoptics.V4088-Polimero/P230.xaml
@@ -31,9 +31,9 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe 
-            StatusComponent="230-71-ECS1" Canvas.Left="372" Canvas.Top="239" PipeHeight="Big" Width="260" Loaded="Pipe_Loaded" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" />
+            StatusComponent="228-01-MA1" Canvas.Left="372" Canvas.Top="239" PipeHeight="Big" Width="260" Loaded="Pipe_Loaded" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:Pipe 
-            StatusComponent="230-71-ECS1" Canvas.Left="134" Canvas.Top="139" PipeHeight="Big" Width="211" Loaded="Pipe_Loaded" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" >
+            StatusComponent="230-71-ECS2" Canvas.Left="134" Canvas.Top="139" PipeHeight="Big" Width="211" Loaded="Pipe_Loaded" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -43,7 +43,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="62" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="230-21-CV1" Canvas.Left="595" Canvas.Top="64" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="Water" Width="62" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="230-71-ECS1" Canvas.Left="595" Canvas.Top="64" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
