Prevu.Drawings: Fixed some Shadows

--- a/Prevu.Drawings/Machines/Release_01/General/V01_DRY_HeatingBattery.xaml
+++ b/Prevu.Drawings/Machines/Release_01/General/V01_DRY_HeatingBattery.xaml
@@ -16,7 +16,7 @@
             </Canvas.Resources>
             <!--Unknown tag: sodipodi:namedview-->
             <Canvas Name="g627" >
-                <Path  Name="path619" Fill="#FF4C4C4C">
+                <Path  Name="path619" Fill="#FF292929" Effect="{DynamicResource MaterialDesignElevationShadow1}">
                     <Path.Data>
                         <PathGeometry Figures="M12.3613 84.7702C13.0127 83.6303 14.2249 82.9268 15.5378 82.9268H83.4831C84.6647 82.9268 85.7735 83.4974 86.4602 84.4589L90.782 90.5094C91.2252 91.1298 91.4634 91.8733 91.4634 92.6358V96.3415C91.4634 98.362 89.8255 100 87.8049 100H12.1952C10.1746 100 8.53662 98.362 8.53662 96.3415V92.435C8.53662 91.7983 8.70277 91.1726 9.01866 90.6198L12.3613 84.7702Z" FillRule="NonZero"/>
                     </Path.Data>
