--- a/Prevu.Drawings/Machines/Release_01/General/V01_Manual_Selection.xaml
+++ b/Prevu.Drawings/Machines/Release_01/General/V01_Manual_Selection.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              IsHitTestVisible="False">
     <Viewbox  Stretch="Uniform">
-        <Canvas Name="svg116" Width="60" Height="97">
+        <Canvas Name="svg116" Width="60" Height="97" Effect="{DynamicResource MaterialDesignElevationShadow1}">
             <Canvas.RenderTransform>
                 <TranslateTransform X="0" Y="0"/>
             </Canvas.RenderTransform>
@@ -22,7 +22,7 @@
                         <PathGeometry Figures="M59.8404 51.9643C59.8404 64.4741 46.8207 45.391 30.468 45.391C14.1152 45.391 0 65.3624 0 52.8526C0 42.282 13.8783 29.3132 30.2311 29.3132C46.5838 29.3132 59.0705 39.1731 59.8404 51.9643Z" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path105" Fill="#FF808080">
+                <Path  Name="path105" Fill="#FF808080" HorizontalAlignment="Center" Canvas.Top="-0.032" VerticalAlignment="Center">
                     <Path.Data>
                         <PathGeometry Figures="M21.1411 97V66.5321H39.795V97H21.1411Z" FillRule="NonZero"/>
                     </Path.Data>
