--- a/Prevu.Drawings/Machines/Release_01/Valves/V01_CV_Valve.xaml
+++ b/Prevu.Drawings/Machines/Release_01/Valves/V01_CV_Valve.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              IsHitTestVisible="False">
     <Viewbox  Stretch="Uniform">
-        <Canvas Name="svg323" Width="137" Height="72">
+        <Canvas Name="svg323" Width="137" Height="72" Effect="{DynamicResource MaterialDesignElevationShadow1}">
             <Canvas.RenderTransform>
                 <TranslateTransform X="0" Y="0"/>
             </Canvas.RenderTransform>
